2011-01-11  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * THANKS, src/about.c:
   Added Rafael Peregrino da Silva to list of contributors for Brazilian
   Portuguese (pt_BR) translation.


2011-01-10  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/toolbar.c, src/ui_utils.c, src/about.c, THANKS:
   Add Save As toolbar button option (patch by Matthew Brush, thanks;
   #3153490).
 * scintilla/*, src/utils.c, src/notebook.c,
   data/filetypes.cpp, data/filetypes.vala, data/filetypes.glsl,
   data/filetypes.cs, data/filetypes.c, wscript:
   Merge unstable branch:
 - src/utils.c:
   Fix detecting non-lowercase self-closing tags e.g. <BR> (#2226117).
 - src/notebook.c:
   Add 'Open in New Window' command in the notebook tab menu (based on
   patch by Matthew Brush, thanks - #3118059).
 - data/filetypes.cpp, data/filetypes.vala, data/filetypes.glsl,
   data/filetypes.cs, data/filetypes.c:
   Disable preprocessor #define tracking for the CPP lexer
   (enabled by default in Scintilla).
 - scintilla/*, wscript:
   Update Scintilla to version 2.22.
   Use Scintilla's directory structure mostly and only remove
   unused lexers.


2011-01-05  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * New release: Geany 0.20 "Disra".


2011-01-04  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/plugins.c:
   Add debug message with the number of compatible plugins in each
   plugin search path when showing the Plugin Manager dialog.


2010-12-30  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * doc/geany.txt, doc/geany.html:
   Move and update 'Custom filetypes' section.
   Add 'Creating a custom filetype from an existing filetype' section.


2010-12-24  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/interface.c, src/keybindings.c, geany.glade:
   Add Edit->Insert Alternative White Space menu item (was previously
   removed from Edit->Commands submenu).

